tests/ui/unsized/ice-thin-ptr-to-unsized-projection.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ice-thin-ptr-to-unsized-projection.rs:2:17
   |
LL | struct Foo<'a>(<& /*'a*/ [fn()] as core::ops::Deref>::Target); // adding the lifetime solves the ice
   |                 ^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL | struct Foo<'a>(<&'a  /*'a*/ [fn()] as core::ops::Deref>::Target); // adding the lifetime solves the ice
   |                  ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
